--- a/DotNet/packages.config
+++ b/DotNet/packages.config
@@ -6,4 +6,5 @@
   <package id="PricingLibrary" version="1.0.1.3" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
+  <package id="System.Windows.Controls.DataVisualization.Toolkit" version="4.0.0.0" targetFramework="net461" />
 </packages>
