--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ DotNet/obj/x64/Debug/DotNet.csprojAssemblyReference.cache
 DotNet/obj/x64/Debug/DotNet_MarkupCompile.cache
 DotNet/obj/x64/Debug/MainWindow.g.cs
 DotNet/obj/x64/Debug/MainWindow.g.i.cs
+DotNet/.vs/DotNet/v15/Server/sqlite3/storage.ide
+DotNet/.vs/DotNet/v15/Server/sqlite3/storage.ide-wal
