--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ DotNet/obj/x64/Debug/MainWindow.g.cs
 DotNet/obj/x64/Debug/MainWindow.g.i.cs
 DotNet/.vs/DotNet/v15/Server/sqlite3/storage.ide
 DotNet/.vs/DotNet/v15/Server/sqlite3/storage.ide-wal
+DotNet/.vs/DotNet/v15/Server/sqlite3/storage.ide
+DotNet/.vs/DotNet/v15/Server/sqlite3/storage.ide-wal
