--- a/DotNet/packages.config
+++ b/DotNet/packages.config
@@ -3,6 +3,9 @@
   <package id="Baseclass.Contrib.Nuget.Output" version="2.3.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net461" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
+  <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net461" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
   <package id="PricingLibrary" version="1.0.1.3" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
