--- a/DotNet/DotNet.csproj
+++ b/DotNet/DotNet.csproj
@@ -108,6 +108,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\Universe.cs" />
+    <Compile Include="ViewModel\UniverseViewModel.cs" />
+    <Compile Include="ViewModel\GraphViewModel.cs" />
     <Compile Include="Visualization\GraphVisualization.xaml.cs">
       <DependentUpon>GraphVisualization.xaml</DependentUpon>
     </Compile>
@@ -123,7 +126,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Graph.cs" />
+    <Compile Include="Models\Graph.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="MainWindowViewModels.cs" />
     <Compile Include="MainWindow.xaml.cs">
