--- a/DotNet/DotNet.csproj
+++ b/DotNet/DotNet.csproj
@@ -108,6 +108,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\covMatrix.cs" />
     <Compile Include="Visualization\GraphVisualization.xaml.cs">
       <DependentUpon>GraphVisualization.xaml</DependentUpon>
     </Compile>
