--- a/DotNet/DotNet.csproj
+++ b/DotNet/DotNet.csproj
@@ -109,6 +109,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\Universe.cs" />
+    <Compile Include="ViewModel\InitializerViewModel.cs" />
     <Compile Include="ViewModel\UniverseViewModel.cs" />
     <Compile Include="ViewModel\GraphViewModel.cs" />
     <Compile Include="Visualization\GraphVisualization.xaml.cs">
