--- a/DotNet/DotNet.csproj
+++ b/DotNet/DotNet.csproj
@@ -108,14 +108,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-
-    <Compile Include="Models\covMatrix.cs" />
-
+    <Compile Include="Models\LogPrices.cs" />
     <Compile Include="Models\Universe.cs" />
     <Compile Include="ViewModel\InitializerViewModel.cs" />
     <Compile Include="ViewModel\UniverseViewModel.cs" />
     <Compile Include="ViewModel\GraphViewModel.cs" />
-
     <Compile Include="Visualization\GraphVisualization.xaml.cs">
       <DependentUpon>GraphVisualization.xaml</DependentUpon>
     </Compile>
