--- a/DotNet/DotNet.csproj
+++ b/DotNet/DotNet.csproj
@@ -108,6 +108,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\Balancement.cs" />
     <Compile Include="Models\LogPrices.cs" />
     <Compile Include="Models\Universe.cs" />
     <Compile Include="ViewModel\InitializerViewModel.cs" />
