NEW ESTIMATEUR, peut récupérer la mtrice de cov

--- a/DotNet/DotNet.csproj
+++ b/DotNet/DotNet.csproj
@@ -109,6 +109,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\Balancement.cs" />
+    <Compile Include="Models\Estimateur.cs" />
     <Compile Include="Models\LogPrices.cs" />
     <Compile Include="Models\Universe.cs" />
     <Compile Include="ViewModel\InitializerViewModel.cs" />
