methode Mnacho option vanille

--- a/DotNet/DotNet.csproj
+++ b/DotNet/DotNet.csproj
@@ -145,7 +145,7 @@
   <ItemGroup>
     <Compile Include="Models\BDModel.cs" />
     <Compile Include="Models\HistoricalDataFeedProvider.cs" />
-    <Compile Include="Models\PortefeuilleModel.cs" />
+    <Compile Include="Models\Portfolio.cs" />
     <Compile Include="Models\RebalancementModel.cs" />
     <Compile Include="Models\SimulationModel.cs" />
     <Compile Include="Models\Volatilite.cs" />
